FIX: added center alignment for options4

--- a/renderer/styles/style.css
+++ b/renderer/styles/style.css
@@ -114,6 +114,10 @@
     height:100%;
 }
 
+.mtf-container .mtf-content-container .mtf-options-container .mtf-options-vertical-container.options-4{
+    margin:0% 10%;
+}
+
 .mtf-container .mtf-content-container .mtf-options-container .mtf-options-vertical-container.options-3{
     margin:0% 20%;
 }
@@ -125,9 +129,9 @@
 
 .mtf-container .mtf-content-container .mtf-options-container .mtf-options-vertical-container .lhs-rhs-container .lhs-rhs-block{
     height:100%;
-    width:19.5%;
     float:left;
     position: relative;
+    width:19.5%;
 }
 
 .mtf-container .mtf-content-container .mtf-options-container .mtf-options-vertical-container .lhs-rhs-container .lhs-rhs-block img.background-image{
